--- a/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
+++ b/src/sdg/components/ToggleSwitch/_toggleSwitch.scss
@@ -6,21 +6,18 @@ $height: 32;
 $border: 1;
 
 .qc-switch {
+  display: flex;
+  grid-template-columns: auto 1fr;
   margin: 0;
-
-  &:not(.qc-switch-justify) {
-    display: inline-flex;
-  }
+  justify-content: flex-end;
+  gap: token-value(spacer, sm);
+  position: relative;
+  cursor: pointer;
 
   &:has(input:disabled) {
     color: token-value(color, grey, regular);
     cursor: not-allowed;
   }
-
-  align-items: center;
-  gap: token-value(spacer, sm);
-  position: relative;
-  cursor: pointer;
 
   input[type=checkbox] {
     opacity: 0;
@@ -52,12 +49,11 @@ $border: 1;
       }
     }
   }
+}
 
-  &.qc-switch-justify {
-    display: flex;
-    flex-grow: 1;
-    justify-content: space-between;
-  }
+.qc-switch-label {
+  margin-top: rem(3);
+  justify-self: end;
 }
 
 .qc-switch-slider {
@@ -66,6 +62,8 @@ $border: 1;
   cursor: pointer;
   min-width: rem($width);
   min-height: rem($height);
+  max-width: rem($width);
+  max-height: rem($height);
   top: 0;
   left: 0;
   right: 0;
