--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2164,7 +2164,6 @@ input[type=radio]:checked.qc-compact::before {
   padding: 0;
   margin: 0 0 var(--qc-spacer-content-block-mb);
   justify-items: start;
-  row-gap: var(--qc-spacer-sm);
 }
 .qc-fieldset legend {
   font-weight: var(--qc-font-weight-content-bold);
@@ -2213,8 +2212,21 @@ input[type=radio]:checked.qc-compact::before {
 
 .qc-field-elements-flex {
   display: flex;
-  gap: var(--qc-spacer-sm);
   flex-direction: column;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+
+.qc-field-elements-flex-sm {
+  gap: var(--qc-spacer-sm);
+}
+
+.qc-field-elements-flex-md {
+  gap: var(--qc-spacer-md);
+}
+
+.qc-justify-end {
+  justify-items: end;
 }
 
 input[type=checkbox]:checked {
@@ -2349,6 +2361,8 @@ input[type=checkbox]:checked.qc-compact::after {
 
 .qc-switch-label-left {
   justify-self: end;
+  justify-content: flex-end;
+  text-align: right;
 }
 
 .qc-switch-slider {
