Modification de l'affichage de message d'aucun élément présent

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2585,8 +2585,8 @@ qc-textfield {
 }
 
 .qc-dropdown-list-no-options {
-  margin-left: var(--qc-spacer-xs);
-  margin-right: var(--qc-spacer-xs);
+  padding: var(--qc-spacer-xs);
+  color: var(--qc-color-grey-medium);
 }
 
 .qc-dropdown-button {
